tui/src/chatwidget/snapshots/ody_tui__chatwidget__tests__usage_limit_reset_confirmation_monthly.snap
---
source: tui/src/chatwidget/tests/usage.rs
expression: "states.join(\"\\n---\\n\")"
---
Free with monthly window:
  Usage limit resets
  You have 1 usage limit reset available.

  1. Use a reset  Reset your current monthly usage limit.
› 2. Cancel

  Press enter to confirm or esc to go back
---
Go with monthly window:
  Usage limit resets
  You have 1 usage limit reset available.

  1. Use a reset  Reset your current monthly usage limit.
› 2. Cancel

  Press enter to confirm or esc to go back
---
Business with monthly window:
  Usage limit resets
  You have 1 usage limit reset available.

  1. Use a reset  Reset your current monthly usage limit.
› 2. Cancel

  Press enter to confirm or esc to go back
